--- a/LogoDetector.csproj
+++ b/LogoDetector.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utilities\BitmapUtilities.cs" />
+    <Compile Include="utilities\EdgeDetector.cs" />
     <Compile Include="utilities\LockBitmap.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
