--- a/LogoDetector.csproj
+++ b/LogoDetector.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -50,6 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="colors\CIELab.cs" />
+    <Compile Include="colors\CIEXYZ.cs" />
+    <Compile Include="colors\CMYK.cs" />
+    <Compile Include="colors\ColorSpaceHelper.cs" />
+    <Compile Include="colors\HSB.cs" />
+    <Compile Include="colors\HSL.cs" />
+    <Compile Include="colors\RGB.cs" />
+    <Compile Include="colors\YUV.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,7 +68,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utilities\BitmapUtilities.cs" />
-    <Compile Include="utilities\EdgeDetector.cs" />
+    <Compile Include="utilities\BitmapConverters.cs" />
     <Compile Include="utilities\LockBitmap.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
