Remove old and not used third party files Use my new algo to detect the logo

--- a/LogoDetector.csproj
+++ b/LogoDetector.csproj
@@ -51,14 +51,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="colors\CIELab.cs" />
-    <Compile Include="colors\CIEXYZ.cs" />
-    <Compile Include="colors\CMYK.cs" />
-    <Compile Include="colors\ColorSpaceHelper.cs" />
-    <Compile Include="colors\HSB.cs" />
-    <Compile Include="colors\HSL.cs" />
-    <Compile Include="colors\RGB.cs" />
-    <Compile Include="colors\YUV.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,8 +60,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utilities\BitmapUtilities.cs" />
-    <Compile Include="utilities\BitmapConverters.cs" />
     <Compile Include="utilities\LockBitmap.cs" />
+    <Compile Include="utilities\MyLogoDetector.cs" />
+    <Compile Include="utilities\MyTemplateMatching.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -101,6 +94,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="res\1487537573_document-excel-csv.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\template_logo.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
