--- a/LogoDetector.csproj
+++ b/LogoDetector.csproj
@@ -101,6 +101,9 @@
   <ItemGroup>
     <None Include="Resources\template_logo_60x60.bmp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\template_logo_72x72.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
