--- a/ImageSimilarFinder/App.config
+++ b/ImageSimilarFinder/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ImageSimilarFinder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <applicationSettings>
+        <ImageSimilarFinder.Properties.Settings>
+            <setting name="ConnectionString" serializeAs="String">
+                <value>Data Source=(localdb)\ProjectsV13;Initial Catalog=SimilarImages;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False</value>
+            </setting>
+        </ImageSimilarFinder.Properties.Settings>
+    </applicationSettings>
 </configuration>
