push all changes

--- a/ImageSimilarFinder/App.config
+++ b/ImageSimilarFinder/App.config
@@ -13,6 +13,9 @@
             <setting name="ConnectionString" serializeAs="String">
                 <value>Data Source=(localdb)\ProjectsV13;Initial Catalog=SimilarImages;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False</value>
             </setting>
+            <setting name="ManaulReview_SqlTableName" serializeAs="String">
+                <value>ManaulReview_DataSet_20170719</value>
+            </setting>
         </ImageSimilarFinder.Properties.Settings>
     </applicationSettings>
 </configuration>
